[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2pdf"
version = "2026.5.11.2"
description = "Tool for converting Markdown files to PDF files."
authors = [{ name = "Travis L. Seymour, PhD", email = "nogard@ucsc.edu" }]
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT License" }
keywords = ["markdown", "pdf", "converter", "tool"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.9",
    "markdown>=3.5",
    "pdfkit>=1.0",
    "pygments>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "build",
    "check-manifest",
]

[project.scripts]
md2pdf = "md2pdf.__main__:app"

[project.urls]
Homepage = "https://github.com/travisseymour/md2pdf"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F821", "F841", "E722"]
